--- a/MomiasVivientes/imagenes.qrc
+++ b/MomiasVivientes/imagenes.qrc
@@ -6,5 +6,12 @@
         <file>N1.jpg</file>
         <file>momia.png</file>
         <file>vidas.png</file>
+        <file>Donald1.png</file>
+        <file>Donald2.png</file>
+        <file>Donald3.png</file>
+        <file>Donald4.png</file>
+        <file>escarabajo1.png</file>
+        <file>escarabajo2.png</file>
+        <file>escarabajo3.png</file>
     </qresource>
 </RCC>
