--- a/MomiasVivientes/inicio.ui
+++ b/MomiasVivientes/inicio.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>763</width>
-    <height>464</height>
+    <width>1217</width>
+    <height>656</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,17 +19,17 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>-90</x>
-     <y>-10</y>
-     <width>861</width>
-     <height>481</height>
+     <x>20</x>
+     <y>10</y>
+     <width>1181</width>
+     <height>631</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="imagenes.qrc">:/fondo.jpg</pixmap>
+    <pixmap resource="imagenes.qrc">:/fondo2.jpg</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
@@ -38,8 +38,8 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>-30</y>
+     <x>370</x>
+     <y>10</y>
      <width>521</width>
      <height>121</height>
     </rect>
@@ -57,8 +57,8 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>40</y>
+     <x>50</x>
+     <y>100</y>
      <width>411</width>
      <height>61</height>
     </rect>
@@ -70,8 +70,8 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>450</x>
-     <y>80</y>
+     <x>770</x>
+     <y>140</y>
      <width>191</width>
      <height>61</height>
     </rect>
@@ -83,8 +83,8 @@
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>80</y>
+     <x>70</x>
+     <y>150</y>
      <width>381</width>
      <height>61</height>
     </rect>
@@ -96,8 +96,8 @@
   <widget class="QLabel" name="label_7">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>230</y>
+     <x>50</x>
+     <y>360</y>
      <width>491</width>
      <height>61</height>
     </rect>
@@ -109,8 +109,8 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>600</x>
-     <y>330</y>
+     <x>800</x>
+     <y>540</y>
      <width>131</width>
      <height>61</height>
     </rect>
@@ -127,8 +127,8 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>600</x>
-     <y>400</y>
+     <x>1040</x>
+     <y>540</y>
      <width>131</width>
      <height>51</height>
     </rect>
@@ -145,8 +145,8 @@
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>130</y>
+     <x>90</x>
+     <y>210</y>
      <width>160</width>
      <height>80</height>
     </rect>
@@ -193,8 +193,8 @@
   <widget class="QWidget" name="gridLayoutWidget_2">
    <property name="geometry">
     <rect>
-     <x>460</x>
-     <y>120</y>
+     <x>790</x>
+     <y>210</y>
      <width>160</width>
      <height>80</height>
     </rect>
@@ -229,25 +229,13 @@
   <widget class="QWidget" name="gridLayoutWidget_3">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>300</y>
+     <x>60</x>
+     <y>450</y>
      <width>162</width>
      <height>80</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout_3">
-    <item row="1" column="0">
-     <widget class="QRadioButton" name="opc3_2">
-      <property name="font">
-       <font>
-        <pointsize>11</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Alemania 7 -  Brasil 1</string>
-      </property>
-     </widget>
-    </item>
     <item row="2" column="0">
      <widget class="QRadioButton" name="opc3_3">
       <property name="font">
@@ -257,6 +245,18 @@
       </property>
       <property name="text">
        <string>Alemania 7 -  Brasil 8</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QRadioButton" name="opc3_2">
+      <property name="font">
+       <font>
+        <pointsize>11</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Alemania 7 -  Brasil 1</string>
       </property>
      </widget>
     </item>
