--- a/MomiasVivientes/juego.ui
+++ b/MomiasVivientes/juego.ui
@@ -133,8 +133,26 @@
      <height>21</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuArchivo">
+    <property name="title">
+     <string>Archivo</string>
+    </property>
+    <addaction name="actionGuardar_Juego"/>
+    <addaction name="actionCargar_Juego"/>
+   </widget>
+   <addaction name="menuArchivo"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionGuardar_Juego">
+   <property name="text">
+    <string>Guardar Juego</string>
+   </property>
+  </action>
+  <action name="actionCargar_Juego">
+   <property name="text">
+    <string>Cargar Juego</string>
+   </property>
+  </action>
  </widget>
  <resources>
   <include location="imagenes.qrc"/>
