--- a/MomiasVivientes/imagenes.qrc
+++ b/MomiasVivientes/imagenes.qrc
@@ -32,5 +32,6 @@
         <file>Donald_momia2.png</file>
         <file>suelo.jpg</file>
         <file>N1.jpg</file>
+        <file>lluvia.gif</file>
     </qresource>
 </RCC>
