--- a/MomiasVivientes/juego.ui
+++ b/MomiasVivientes/juego.ui
@@ -110,6 +110,57 @@
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="gotas">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>70</y>
+      <width>1031</width>
+      <height>551</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>10</y>
+      <width>211</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>AR CENA</family>
+      <pointsize>26</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Numero Bombas</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="N_Bombas">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>10</y>
+      <width>81</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Agency FB</family>
+      <pointsize>36</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -120,8 +171,26 @@
      <height>21</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuArchivo">
+    <property name="title">
+     <string>Archivo</string>
+    </property>
+    <addaction name="actionGuardar_Juego"/>
+    <addaction name="actionCargar_Juego"/>
+   </widget>
+   <addaction name="menuArchivo"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionGuardar_Juego">
+   <property name="text">
+    <string>Guardar Juego</string>
+   </property>
+  </action>
+  <action name="actionCargar_Juego">
+   <property name="text">
+    <string>Cargar Juego</string>
+   </property>
+  </action>
  </widget>
  <resources>
   <include location="imagenes.qrc"/>
