Imagenes y colisiones en Multijugador OK, Problemas al Cargar, Guardar Listo

--- a/MomiasVivientes/imagenes.qrc
+++ b/MomiasVivientes/imagenes.qrc
@@ -33,5 +33,15 @@
         <file>suelo.jpg</file>
         <file>N1.jpg</file>
         <file>lluvia.gif</file>
+        <file>Donald2_1.png</file>
+        <file>Donald2_2.png</file>
+        <file>Donald2_3.png</file>
+        <file>Donald2_4.png</file>
+        <file>lanzar2_1.png</file>
+        <file>lanzar2_2.png</file>
+        <file>lanzar2_3.png</file>
+        <file>lanzar2_4.png</file>
+        <file>lanzar2_5.png</file>
+        <file>lanzar2_6.png</file>
     </qresource>
 </RCC>
