Despues de tanto tiempo el paso de vineles listo
:)

--- a/MomiasVivientes/imagenes.qrc
+++ b/MomiasVivientes/imagenes.qrc
@@ -44,5 +44,9 @@
         <file>lanzar2_5.png</file>
         <file>lanzar2_6.png</file>
         <file>bolaenelaire.png</file>
+        <file>multijugador.jpg</file>
+        <file>N2.jpg</file>
+        <file>sueloN2.jpg</file>
+        <file>N3.jpg</file>
     </qresource>
 </RCC>
