--- a/MomiasVivientes/juego.ui
+++ b/MomiasVivientes/juego.ui
@@ -204,6 +204,57 @@
      <string>vidas jugador 2</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>260</x>
+      <y>10</y>
+      <width>201</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>AR CENA</family>
+      <pointsize>26</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Numero Bombas</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="N_Bombas">
+    <property name="geometry">
+     <rect>
+      <x>470</x>
+      <y>10</y>
+      <width>51</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>AR CENA</family>
+      <pointsize>26</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_Guardar">
+    <property name="geometry">
+     <rect>
+      <x>940</x>
+      <y>630</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Guardar</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -218,20 +269,14 @@
     <property name="title">
      <string>Archivo</string>
     </property>
-    <addaction name="actionGuardar_Juego"/>
-    <addaction name="actionCargar_Juego"/>
+    <addaction name="actionGuardar_juego_Nivel1"/>
    </widget>
    <addaction name="menuArchivo"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="actionGuardar_Juego">
+  <action name="actionGuardar_juego_Nivel1">
    <property name="text">
-    <string>Guardar Juego</string>
-   </property>
-  </action>
-  <action name="actionCargar_Juego">
-   <property name="text">
-    <string>Cargar Juego</string>
+    <string>Guardar juego Nivel1</string>
    </property>
   </action>
  </widget>
