--- a/MomiasVivientes/imagenes.qrc
+++ b/MomiasVivientes/imagenes.qrc
@@ -1,87 +1,62 @@
 <RCC>
     <qresource prefix="/">
-        <file>fondo.jpg</file>
-        <file>fondo2.jpg</file>
-        <file>gema1.png</file>
-        <file>vidas.png</file>
+        <file>barraPequeña.png</file>
+        <file>barraPequeñita.png</file>
+        <file>bola.png</file>
+        <file>bolaenelaire.png</file>
         <file>Donald1.png</file>
         <file>Donald2.png</file>
+        <file>Donald2_1.png</file>
+        <file>Donald2_2.png</file>
+        <file>Donald2_3.png</file>
+        <file>Donald2_4.png</file>
         <file>Donald3.png</file>
         <file>Donald4.png</file>
+        <file>Donald_momia.png</file>
+        <file>Donald_momia2.png</file>
+        <file>Donald_momia3.png</file>
+        <file>Egyptian music.mp3</file>
+        <file>escarabajo.png</file>
         <file>escarabajo1.png</file>
         <file>escarabajo2.png</file>
         <file>escarabajo3.png</file>
-        <file>bola.png</file>
-        <file>lanzar1.png</file>
-        <file>lanzar2.png</file>
-        <file>lanzar3.png</file>
-        <file>lanzar4.png</file>
-        <file>lanzar5.png</file>
-        <file>lanzar6.png</file>
+        <file>explosion.mp3</file>
+        <file>explosion.png</file>
         <file>explosion1.png</file>
         <file>explosion2.png</file>
         <file>explosion3.png</file>
         <file>explosion4.png</file>
         <file>explosion5.png</file>
-        <file>salto.mp3</file>
-        <file>explosion.mp3</file>
+        <file>fondo.jpg</file>
+        <file>fondo2.jpg</file>
+        <file>fuego.png</file>
+        <file>GameOver.gif</file>
+        <file>ganaste.gif</file>
+        <file>gema.png</file>
+        <file>gema1.png</file>
+        <file>jugador2.png</file>
         <file>lanzar.mp3</file>
-        <file>Egyptian music.mp3</file>
-        <file>Donald_momia.png</file>
-        <file>Donald_momia2.png</file>
-        <file>suelo.jpg</file>
-        <file>N1.jpg</file>
-        <file>lluvia.gif</file>
-        <file>Donald2_1.png</file>
-        <file>Donald2_2.png</file>
-        <file>Donald2_3.png</file>
-        <file>Donald2_4.png</file>
+        <file>lanzar1.png</file>
+        <file>lanzar2.png</file>
         <file>lanzar2_1.png</file>
         <file>lanzar2_2.png</file>
         <file>lanzar2_3.png</file>
         <file>lanzar2_4.png</file>
         <file>lanzar2_5.png</file>
         <file>lanzar2_6.png</file>
-        <file>bolaenelaire.png</file>
+        <file>lanzar3.png</file>
+        <file>lanzar4.png</file>
+        <file>lanzar5.png</file>
+        <file>lanzar6.png</file>
+        <file>lluvia.gif</file>
         <file>multijugador.jpg</file>
+        <file>N1.jpg</file>
         <file>N2.jpg</file>
         <file>N3.jpg</file>
+        <file>salto.mp3</file>
+        <file>suelo.jpg</file>
+        <file>suelo.png</file>
         <file>sueloN2.jpg</file>
-        <file>barraPequeña.png</file>
-        <file>barraPequeñita.png</file>
-        <file>ganaste.gif</file>
-        <file>aviso.cpp</file>
-        <file>aviso.h</file>
-        <file>base.cpp</file>
-        <file>base.h</file>
-        <file>controldejuego.cpp</file>
-        <file>controldejuego.h</file>
-        <file>controldejuego_copy.h</file>
-        <file>GameOver.gif</file>
-        <file>gema.cpp</file>
-        <file>gema.h</file>
-        <file>gemas.cpp</file>
-        <file>gemas.h</file>
-        <file>inicio.cpp</file>
-        <file>inicio.h</file>
-        <file>juego.cpp</file>
-        <file>juego.h</file>
-        <file>main.cpp</file>
-        <file>mainwindow.cpp</file>
-        <file>mainwindow.h</file>
-        <file>mododejuego.cpp</file>
-        <file>mododejuego.h</file>
-        <file>momia.cpp</file>
-        <file>momia.h</file>
-        <file>nivel2.cpp</file>
-        <file>nivel2.h</file>
-        <file>nivel3.cpp</file>
-        <file>nivel3.h</file>
-        <file>niveles.cpp</file>
-        <file>niveles.h</file>
-        <file>objcaida.cpp</file>
-        <file>objcaida.h</file>
-        <file>obstcaculosenmov.cpp</file>
-        <file>obstcaculosenmov.h</file>
+        <file>vidas.png</file>
     </qresource>
 </RCC>
