--- a/MomiasVivientes/aviso.ui
+++ b/MomiasVivientes/aviso.ui
@@ -29,7 +29,7 @@
   <widget class="QLabel" name="gano">
    <property name="geometry">
     <rect>
-     <x>310</x>
+     <x>160</x>
      <y>150</y>
      <width>426</width>
      <height>186</height>
@@ -49,9 +49,23 @@
     </rect>
    </property>
   </widget>
+  <widget class="QLabel" name="momia">
+   <property name="geometry">
+    <rect>
+     <x>700</x>
+     <y>120</y>
+     <width>255</width>
+     <height>305</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
   <zorder>graphicsView</zorder>
   <zorder>ok</zorder>
   <zorder>gano</zorder>
+  <zorder>momia</zorder>
  </widget>
  <resources/>
  <connections/>
